adding name search function

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <tr>
           <th>Movie Name</th>
           <th>Launched Year</th>
+          <th>Cover photo</th>
         </tr>
       </thead>
       <tbody id="moviedata">
